[package]
name = "Rust-API-Nails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
listenfd = "1.0.1"

# for logging and env file
dotenv = "0.15"
log = "0.4"
env_logger = "0.10.1"

# Rust sqlite interface
rusqlite = {version = "0.30.0", features = ["bundled"]}

# JSON convertor
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"